# Parzel

./: Cargo.toml  README.md  complete_code.txt  old_version.rs  parzel.txt
benches/: search_bench.rs
docs/: algorithms.txt  tecnniques.txt
src/: context.rs  data.rs  engine.rs  error.rs  iter.rs  lib.rs  main.rs  prelude.rs  scoring.rs  simd.rs  tokenizer.rs  utils.rs
