[package]
name = "parzel"
version = "0.1.0"
edition = "2024"
description = "A high-performance search engine kernel for WebAssembly"
license = "MIT OR Apache-2.0"

[lib]
# 'cdylib' generates the .wasm file for browser consumption
# 'rlib' allows this crate to be used as a dependency in other Rust projects
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "parzel-cli"
path = "src/main.rs"

[[bench]]
name = "search_bench"
harness = false

[dependencies]
# Memory allocator (WASM only)
lol_alloc = { version = "0.4.1", optional = true }

# Compression - supports no_std
bitpacking = { version = "0.9", default-features = false, features = ["bitpacker4x"] }

# Data structures
fst = { version = "0.4", default-features = false }

# WASM runtime (needed for JS interop)
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"
criterion = { version = "0.5", default-features = false }
rand = "0.8"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

# Profile para profiling con perf/flamegraph
[profile.profiling]
inherits = "release"
debug = "full"
strip = false
opt-level = 3
panic = "unwind"

# Profile for benchmarking - must use unwind for Criterion
[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = true  # Needed for flamegraph symbols
panic = "unwind"

[profile.dev]
# Required for native testing
panic = "unwind"

[features]
default = ["lol_alloc"]
lol_alloc = ["dep:lol_alloc"]

# Feature to build for native targets (testing/benchmarking)
std = []